momentuHMM 1.4.3 2018-08-29
-----------------
NEW FEATURES

* betaCons argument added to fitHMM and MIfitHMM for specifying equality constraints on transition probability matrix parameters

* betaRef argument added to fitHMM and MIfitHMM for specifying the reference states for t.p.m. multinomial logit link

* retryParallel argument added to crawlWrap

CHANGES

* changed how fixPar and betaCons are handled when optimizing the likelihood; this should make optimization faster and more stable when these parameter constraints are used

* %dorng% now used instead of %dopar%, thereby allowing for reproducible foreach loops when using parallel processing

* cleaned up crawlWrap printing when retryFits>0 and retryParallel=FALSE

* retrySD argument in fitHMM and MIfitHMM can now be a scalar

* bug fix in calculation of standard errors (and confidence intervals) for transition probability and initial distribution parameters when workBounds$beta or workBounds$delta are specified other than the default (-Inf,Inf)

* bug fix in calculation of number of parameters in getAIC when formulaDelta=~1 and initial distribution is fixed using fixPar$delta


momentuHMM 1.4.2 2018-06-19
-----------------
NEW FEATURES

* Northern fulmar example of Pirotta et al (2018) added to vignette

* retrySD argument added to crawlWrap for additional flexibility when exploring the likelihood surface using retryFits

* shape argument added to plotSat and plotSpatialCov functions

* projargs argument added to plotSat function (for handling projected data coordinates)

* stateNames argument added to plotSpatialCov function

* data argument of plotSat function can now be a data frame, momentuHMMData, momentuHMM, miHMM, or miSum object

* data argument of plotSpatialCov function can now be a data frame, momentuHMMData, momentuHMM, miHMM, or miSum object

CHANGES

* 'angleStrength' special function name changed to 'angleFormula'

* strength argument in 'angleFormula' special function is now optional
