@@ -4,7 +4,7 @@ test_that("Exceptions are thrown",{
   
   oldRNG<-setRNG::setRNG()
   
-  setRNG::setRNG(kind="L'Ecuyer-CMRG",normal.kind="Inversion",seed=1)
+  setRNG::setRNG(kind="L'Ecuyer-CMRG",normal.kind="Inversion",seed=2)
   
   theta<-c(6,-0.5)
   err.model <- miExample$err.model
